--- a/UDP_Test_GUI/packages.config
+++ b/UDP_Test_GUI/packages.config
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Google.Protobuf" version="3.22.5" targetFramework="net472" />
-  <package id="Grpc" version="2.44.0" targetFramework="net472" />
-  <package id="Grpc.Core" version="2.44.0" targetFramework="net472" />
-  <package id="Grpc.Core.Api" version="2.44.0" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.27.2" targetFramework="net472" />
+  <package id="Grpc" version="2.46.6" targetFramework="net472" />
+  <package id="Grpc.Core" version="2.46.6" targetFramework="net472" />
+  <package id="Grpc.Core.Api" version="2.63.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="8.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="8.0.2" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Diagnostics.Abstractions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Configuration" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="8.0.2" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
@@ -23,7 +23,7 @@
   <package id="OpenTelemetry.Api.ProviderBuilderExtensions" version="1.9.0" targetFramework="net472" />
   <package id="OpenTelemetry.Exporter.OpenTelemetryProtocol" version="1.9.0" targetFramework="net472" />
   <package id="PacketDotNet" version="1.4.7" targetFramework="net472" />
-  <package id="Serilog" version="2.12.0" targetFramework="net472" />
+  <package id="Serilog" version="4.0.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Grafana.Loki" version="8.3.0" targetFramework="net472" />
   <package id="SharpPcap" version="6.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
@@ -33,7 +33,8 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="8.0.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
-  <package id="System.Text.Json" version="4.7.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="8.0.4" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="8.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
