--- a/Dashboard_Config.json
+++ b/Dashboard_Config.json
@@ -1,4 +1,73 @@
 {
+  "__inputs": [
+    {
+      "name": "DS_PROMETHEUS",
+      "label": "prometheus",
+      "description": "",
+      "type": "datasource",
+      "pluginId": "prometheus",
+      "pluginName": "Prometheus"
+    },
+    {
+      "name": "DS_LOKI",
+      "label": "loki",
+      "description": "",
+      "type": "datasource",
+      "pluginId": "loki",
+      "pluginName": "Loki"
+    }
+  ],
+  "__elements": {},
+  "__requires": [
+    {
+      "type": "panel",
+      "id": "canvas",
+      "name": "Canvas",
+      "version": ""
+    },
+    {
+      "type": "panel",
+      "id": "gauge",
+      "name": "Gauge",
+      "version": ""
+    },
+    {
+      "type": "grafana",
+      "id": "grafana",
+      "name": "Grafana",
+      "version": "11.1.0"
+    },
+    {
+      "type": "panel",
+      "id": "logs",
+      "name": "Logs",
+      "version": ""
+    },
+    {
+      "type": "datasource",
+      "id": "loki",
+      "name": "Loki",
+      "version": "1.0.0"
+    },
+    {
+      "type": "datasource",
+      "id": "prometheus",
+      "name": "Prometheus",
+      "version": "1.0.0"
+    },
+    {
+      "type": "panel",
+      "id": "stat",
+      "name": "Stat",
+      "version": ""
+    },
+    {
+      "type": "panel",
+      "id": "timeseries",
+      "name": "Time series",
+      "version": ""
+    }
+  ],
   "annotations": {
     "list": [
       {
@@ -18,14 +87,14 @@
   "editable": true,
   "fiscalYearStartMonth": 0,
   "graphTooltip": 0,
-  "id": 1,
+  "id": null,
   "links": [],
   "liveNow": true,
   "panels": [
     {
       "datasource": {
         "type": "prometheus",
-        "uid": "fdrdnwucxkz5se"
+        "uid": "${DS_PROMETHEUS}"
       },
       "fieldConfig": {
         "defaults": {
@@ -163,7 +232,7 @@
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "fdrdnwucxkz5se"
+            "uid": "${DS_PROMETHEUS}"
           },
           "disableTextWrap": false,
           "editorMode": "builder",
@@ -182,7 +251,7 @@
     {
       "datasource": {
         "type": "loki",
-        "uid": "fdrgofznm0v7kc"
+        "uid": "${DS_LOKI}"
       },
       "description": "",
       "fieldConfig": {
@@ -249,7 +318,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "fdrgofznm0v7kc"
+            "uid": "${DS_LOKI}"
           },
           "editorMode": "builder",
           "expr": "{RepeaterSide=\"Backend/Service\"} |= `stop` | line_format `Stopped`",
@@ -260,7 +329,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "fdrgofznm0v7kc"
+            "uid": "${DS_LOKI}"
           },
           "editorMode": "builder",
           "expr": "{RepeaterSide=\"Backend/Service\"} |= `start` | line_format `Running`",
@@ -293,7 +362,7 @@
     {
       "datasource": {
         "type": "prometheus",
-        "uid": "fdrdnwucxkz5se"
+        "uid": "${DS_PROMETHEUS}"
       },
       "fieldConfig": {
         "defaults": {
@@ -375,7 +444,7 @@
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "fdrdnwucxkz5se"
+            "uid": "${DS_PROMETHEUS}"
           },
           "disableTextWrap": false,
           "editorMode": "builder",
@@ -397,7 +466,7 @@
     {
       "datasource": {
         "type": "prometheus",
-        "uid": "fdrdnwucxkz5se"
+        "uid": "${DS_PROMETHEUS}"
       },
       "description": "Project requirements specified 30ms or less",
       "fieldConfig": {
@@ -462,7 +531,7 @@
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "fdrdnwucxkz5se"
+            "uid": "${DS_PROMETHEUS}"
           },
           "disableTextWrap": false,
           "editorMode": "builder",
@@ -482,7 +551,7 @@
     {
       "datasource": {
         "type": "loki",
-        "uid": "fdrgofznm0v7kc"
+        "uid": "${DS_LOKI}"
       },
       "description": "",
       "gridPos": {
@@ -507,7 +576,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "fdrgofznm0v7kc"
+            "uid": "${DS_LOKI}"
           },
           "editorMode": "builder",
           "expr": "{RepeaterSide=\"Backend/Service\"}",
@@ -518,7 +587,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "fdrgofznm0v7kc"
+            "uid": "${DS_LOKI}"
           },
           "editorMode": "builder",
           "expr": "{RepeaterSide=\"Frontend/Interface\"} |= ``",
@@ -540,7 +609,7 @@
     {
       "datasource": {
         "type": "loki",
-        "uid": "fdrgofznm0v7kc"
+        "uid": "${DS_LOKI}"
       },
       "fieldConfig": {
         "defaults": {
@@ -593,7 +662,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "fdrgofznm0v7kc"
+            "uid": "${DS_LOKI}"
           },
           "editorMode": "builder",
           "expr": "sum(count_over_time({RepeaterSide=\"Backend/Service\"} |= `Error` [$__auto]))",
@@ -614,7 +683,7 @@
     {
       "datasource": {
         "type": "prometheus",
-        "uid": "fdrdnwucxkz5se"
+        "uid": "${DS_PROMETHEUS}"
       },
       "fieldConfig": {
         "defaults": {
@@ -676,7 +745,7 @@
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "fdrdnwucxkz5se"
+            "uid": "${DS_PROMETHEUS}"
           },
           "disableTextWrap": false,
           "editorMode": "builder",
@@ -695,7 +764,7 @@
     {
       "datasource": {
         "type": "prometheus",
-        "uid": "fdrdnwucxkz5se"
+        "uid": "${DS_PROMETHEUS}"
       },
       "fieldConfig": {
         "defaults": {
@@ -758,7 +827,7 @@
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "fdrdnwucxkz5se"
+            "uid": "${DS_PROMETHEUS}"
           },
           "disableTextWrap": false,
           "editorMode": "builder",
@@ -781,7 +850,7 @@
     "list": []
   },
   "time": {
-    "from": "now-3h",
+    "from": "now-12h",
     "to": "now"
   },
   "timepicker": {
